# noscrypt

./: .onedev-buildspec.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  GitVersion.yml  LICENSE  Module.Taskfile.yaml  README.md  SECURITY.md  Taskfile.yaml  noscrypt.build.sln  nuget.config  package.json
include/: nc-util.h  noscrypt.h  noscryptutil.h  platform.h
packaging/: Taskfile.yaml  cpack.cmake  package.json
src/: hkdf.c  hkdf.h  nc-crypto.c  nc-crypto.h  nc-util.h  noscrypt.c  noscrypt.h  noscryptutil.c
src/crypto/: nc-crypto.c  nc-crypto.h
src/crypto/impl/: bcrypt.c  mbedtls.c  monocypher.c  openssl.c
src/internal/: nc-crypto.c  nc-crypto.h  nc-util.h
src/internal/impl/: bcrypt.c  mbedtls.c  monocypher.c  openssl.c
src/providers/: bcrypt.c  mbedtls.c  monocypher.c  openssl-helpers.c  openssl.c
tests/: hex.h  test.c
wrappers/dotnet/: Taskfile.yaml
wrappers/dotnet/VNLib.Utils.Cryptography.Noscrypt/: .runsettings  README.md  Taskfile.yaml
wrappers/dotnet/VNLib.Utils.Cryptography.Noscrypt/src/: Base64SignatureEncoder.cs  HexSignatureEncoder.cs  IEncryptionVersion.cs  INostrCrypto.cs  INostrEncryptionVersion.cs  INostrSignatureEncoder.cs  IRandomSource.cs  LibNoscrypt.cs  NCContext.cs  NCKeyUtil.cs  NCNip04EncryptionVersion.cs  NCNip44EncryptionVersion.cs  NCPublicKey.cs  NCSecretKey.cs  NCUtil.cs  NcFallbackRandom.cs  Nip04Util.cs  Nip44Message.cs  Nip44MessageSegments.cs  Nip44Util.cs  Noscrypt.cs  NoscryptExtensions.cs  NoscryptLibrary.cs  NoscryptSigner.cs  NostrCrypto.cs  NostrEncryptedMessage.cs  NostrMessageCipher.cs  Taskfile.yaml  UnmanagedRandomSource.cs  VNLib.Utils.Cryptography.Noscrypt.csproj
wrappers/dotnet/VNLib.Utils.Cryptography.Noscrypt/src/Encryption/: NCCipherFlags.cs  NCCipherUtil.cs  NCCipherVersion.cs  NCMessageCipher.cs  NCUtilCipher.cs  NoscryptCipher.cs  NoscryptCipherFlags.cs  NoscryptCipherVersion.cs  NoscryptMessageCipher.cs
wrappers/dotnet/VNLib.Utils.Cryptography.Noscrypt/src/Random/: IRandomSource.cs  NcFallbackRandom.cs  UnmanagedRandomSource.cs
wrappers/dotnet/VNLib.Utils.Cryptography.Noscrypt/src/Signatures/: Base64SignatureEncoder.cs  HexSignatureEncoder.cs  INostrSignatureEncoder.cs  NCBase64SignatureEncoder.cs  NCHexSignatureEncoder.cs  NCSignatureUtil.cs  NCSigner.cs  NoscryptSigner.cs
wrappers/dotnet/VNLib.Utils.Cryptography.Noscrypt/src/Singatures/: Base64SignatureEncoder.cs  HexSignatureEncoder.cs  INostrSignatureEncoder.cs  NCSignatureUtil.cs  NoscryptSigner.cs
wrappers/dotnet/VNLib.Utils.Cryptography.Noscrypt/src/internal/: FunctionTable.cs  NCEncryptionArgs.cs  NCMacVerifyArgs.cs  NCUtil.cs
wrappers/dotnet/VNLib.Utils.Cryptography.Noscrypt/tests/: LibNoscryptTests.cs  NCKeyUtilTests.cs  NVault.Crypto.NoscryptTests.csproj  NoscryptSignatureTests.cs  NoscryptVectorTests.cs  VNLib.Utils.Cryptography.NoscryptTests.csproj  nostr-signatures.json
